# mirtos

./: .gitignore  README.md  binner.py  cleaner_class.py  cleaner_masked_class.py  config.yaml  lib.py  mirtos_multiprocess.ipynb  pyproject.toml  skydip.ipynb  subscan_class.py  task.py  telescope_class.py
configs/: a1995_conf.yaml  config.yaml  cygA_conf.yaml  instrum_settings.yaml  jupyter.yaml
configs/example/: 3c84.yaml  a1995.yaml  cygA.yaml  jupyter.yaml
configs/instrument/: lab_receiver_LAB.yaml  mistral_SRT.yaml  mustang2_GBT.yaml
configs/instrument/receiver/: lab_receiver.yaml  mistral.yaml  mustang2.yaml
configs/instrument/telescope/: GBT.yaml  LAB.yaml  SRT.yaml
metadata/: gain.npy
notebooks/: comparision.ipynb  mirtos_multiprocess.ipynb
src/: run_mapmaking.py
src/mirtos/: binner.py  cleaner_class.py  cleaner_masked_class.py  lib.py  process_all.py  process_subscans.py  subscan_class.py  task.py
src/mirtos/calibration/: calibration.py  gain_calibration.py  skydipcalibration.py
src/mirtos/cli/: run_mapmaking.py  run_preprocessing.py
src/mirtos/core/: common.py  config_types.py  data_types.py  mapmaking.py  multipreprocess.py  projections.py
src/mirtos/core/type_defs/: beam_map.py  calibration.py  config.py  filters.py  focal_plane.py  mapmaking.py  scan.py
src/mirtos/core/types/: beam_map.py  (+6 more)
src/mirtos/filtering/: filters.py  filters_copy.py
src/mirtos/io/: dat.py  fits.py  yaml.py
src/mirtos/mapmaking/: mapmaking.py
src/mirtos/plotting/: __init__.py  map.py
src/mirtos/preprocessing/: preprocess.py
test/: test_projections.py
(+1 files in other folders)
