[project]
name = "mirtos"
version = "0.1.0"
description = ""
packages = [
    {include = "mirtos", from = "src"} # primo parent e' mirtos
]
authors = [
    {name = "sofiaferazzoli",email = "sofiaferazzoli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "astropy (>=7.2.0,<8.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "memory-profiler (>=0.61.0,<0.62.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "ipympl (>=0.10.0,<0.11.0)",
    "mpld3 (>=0.5.12,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
